add Mastodon verification section

--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
-Hello World
+<!-- Mastodon verification -->
 <a rel="me" href="https://mastodon.social/@peterood"></a>
+<a rel="me" href="https://mastodon.xyz/@peterood"></a>
+
+Hello World
