update html and add css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,16 @@
-<!-- Mastodon verification -->
-<a rel="me" href="https://mastodon.social/@peterood"></a>
-<a rel="me" href="https://mastodon.xyz/@peterood"></a>
+<!DOCTYPE html>
+<html lang="en-US">
+    <head>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <title>peterood.com</title>
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <!-- Mastodon verification -->
+        <a rel="me" href="https://mastodon.social/@peterood"></a>
+        <a rel="me" href="https://mastodon.xyz/@peterood"></a>
 
-Hello World
+        <p>peterood.com</p>
+    </body>
+</html>
